change mobile version

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -1,3 +1,144 @@
+/*** Navbar ***/
+.navbar-light .navbar-nav .nav-link {
+  margin-right: 25px;
+  padding: 35px 0;
+  color: var(--bs-dark) !important;
+  font-size: 16px;
+  font-weight: 400;
+  outline: none;
+  transition: .5s;
+}
+
+.sticky-top.navbar-light .navbar-nav .nav-link {
+  padding: 20px 0;
+  color: var(--dark) !important;
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+  color: var(--bs-primary) !important;
+}
+
+.navbar-light .navbar-brand img {
+  //max-height: 50px;
+  transition: .5s;
+}
+
+.sticky-top.navbar-light .navbar-brand img {
+  //max-height: 45px;
+}
+
+.navbar .dropdown-toggle::after {
+  // border: none;
+  // content: "\F282";
+  // // font-family: "Font Awesome 5 Free";
+  // font-weight: 600;
+  // vertical-align: middle;
+  // margin-left: 8px;
+}
+
+@media (min-width: 1200px) {
+  .navbar .nav-item .dropdown-menu {
+      display: block;
+      visibility: hidden;
+      top: 100%;
+      transform: rotateX(-75deg);
+      transform-origin: 0% 0%;
+      border: 0;
+      border-radius: 10px;
+      transition: .5s;
+      opacity: 0;
+  }
+}
+
+.dropdown .dropdown-menu a:hover {
+  background: var(--bs-primary);
+  color: var(--bs-white);
+}
+
+.navbar .nav-item:hover .dropdown-menu {
+  transform: rotateX(0deg);
+  visibility: visible;
+  background: var(--bs-light) !important;
+  transition: .5s;
+  opacity: 1;
+}
+
+.collapse.navbar-collapse {
+  transition: 0.5s;
+}
+
+@media (max-width: 992px) {
+
+  .navbar.navbar-expand-lg button span {
+      position: relative;
+      z-index: 99;
+  }
+
+  .navbar {
+      position: relative;
+      background: var(--bs-light);
+      z-index: 2;
+  }
+
+  .sticky-top.navbar-light {
+      position: relative;
+      background: var(--bs-white) !important;
+      padding: 0 20px 20px 20px !important;
+  }
+
+  .sticky-top.navbar-light {
+      background: transparent;
+  }
+
+  nav.navbar {
+      padding: 0 30px 30px 0;
+  }
+
+  .navbar.navbar-expand-lg .navbar-toggler {
+      padding: 10px 20px;
+      border: 1px solid var(--bs-primary);
+      color: var(--bs-primary);
+  }
+
+  .navbar-light .navbar-collapse {
+      margin-top: 15px;
+      border-top: 1px solid #DDDDDD;
+  }
+
+  .navbar-light .navbar-nav .nav-link,
+  .sticky-top.navbar-light .navbar-nav .nav-link {
+      padding: 10px 0;
+      margin-left: 0;
+      color: var(--bs-dark) !important;
+  }
+
+
+  .navbar-light .navbar-brand img {
+      max-height: 45;
+  }
+
+  .hero-header {
+      margin-top: -100px !important;
+  }
+}
+
+@media (min-width: 992px) {
+  .navbar-light {
+      position: relative;
+      // width: 100%;
+      // top: 0;
+      // left: 0;
+      background: white;//transparent !important;
+      // z-index: 999;
+  }
+  
+  .sticky-top.navbar-light {
+      position: fixed;
+      background: var(--bs-light) !important;
+  }
+}
+/*** Navbar End ***/
 //
 img {
   @extend .img-fluid;
@@ -175,7 +316,15 @@ section {
 .page-section {
   padding: 6rem 0;
 }
-
+@media (max-width: 992px) {
+  .page-section {
+    padding: 3rem 0;
+  }  
+}
+.row, section {
+  --bs-gutter-x: 0;
+  --bs-gutter-y: 0;
+}
 .carousel-inner {
   border: 1px solid #1abc9c;
   border-radius: 5px;
