--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -15,19 +15,8 @@
         <p class="lead">Наше приложение развивается и мы его дополняем разными отчетами, что позволяет вам находить новые мотивация вашим клиентам для совершения покупок. Так же мы готовы реализовать ваш сценарий работы с клиентом. Ещё у нас есть импорт клиентов в инсалес из файла</p>
       </div>
     </div>
-    <%# <div class="text-center"><a class="btn btn-primary btn-lg" href="http://demo-themes.myinsales.ru/" target="_blank">Демо магазин</a></div> %>
   </div>
 </section>
-<%# 
-<section class="page-section price mt-0" id="price">
-  <div class="display-5 mx-auto text-center text-uppercase mb-5">стоимость использования приложения</div>
-  <p class="display-4 text-center text-uppercase text-danger fw-bold mb-4">бесплатно</p>
-  <p class="text-center mb-5">достаточно зарегистрироваться и настроить интеграцию с магазином или установить наше приложения из магазина приложений InSales</p>
-  <div class="d-flex justify-content-center">
-  <%# link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-
-  <%# </div>
-</section>  %>
 <section class="page-section text-white mb-0" id="o-nas">
   <div class="container">
 
@@ -36,18 +25,13 @@
 
     <!-- About Section Content -->
     <div class="row">
-      <div class="col-6 ml-auto">
+      <div class="col-12 col-md-6 ml-auto">
         <p class="lead text-secondary">Мы - это команда единомышленников, которая собралась чтобы создавать решения типовых задач наших клиентов.</p>
       </div>
-      <div class="col-6 mr-auto">
+      <div class="col-12 col-md-6 mr-auto">
         <p class="lead text-secondary">Мы работаем со следующими технологиями - Ruby on Rils, HTML, CSS, и JavaScript</p>
       </div>
     </div>
 
   </div>
 </section>
-<!-- About Section -->
-<%# <section class="page-section bg-primary text-white mb-0" id="o-nas">
-  <div class="container">
-  </div>
-</section> %>
