--- a/app/views/home/_price_section.html.erb
+++ b/app/views/home/_price_section.html.erb
@@ -1,71 +1,60 @@
 <section class="page-section price pt-0">
-    <div class="row justi">
-        <div class="display-6 text-center text-uppercase mb-5">Стоимость</div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
+    <div class="display-6 text-center text-uppercase mb-5">Стоимость</div>
+    <div class="card-group gap-sm-3 gap-md-2">
+        <div class="card text-center ml-0 mr-0">
             <div class="card-header">Бесплатно</div>
-                <div class="card-body">
+            <div class="card-body">
                 <h4 class="card-title ">30 дней</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">консультации</li>
                     <li class="list-group-item">бесплатно 30 дней</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
-                </div>
-                <div class="card-body">
-                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                    
-                </div>
+            </div>
+            <div class="card-body">
+                <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
+        <div class="card text-center ml-0 mr-0">
             <div class="card-header text-white bg-success">Стандарт</div>
-                <div class="card-body">
+            <div class="card-body">
                 <h4 class="card-title">2500 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">консультации</li>
                     <li class="list-group-item">оплата за 1 мес</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
-                </div>
-                <div class="card-body">
+            </div>
+            <div class="card-body">
                 <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                
-                </div>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
+        <div class="card text-center ml-0 mr-0">
             <div class="card-header">Стандарт 6</div>
-                <div class="card-body">
+            <div class="card-body">
                 <h4 class="card-title">2250 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">скидка 10% (13500 ₽)</li>
                     <li class="list-group-item">оплата за 6 мес</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
-                </div>
-                <div class="card-body">
-                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                    
-                </div>
+            </div>
+            <div class="card-body">
+                <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
             </div>
         </div>
-        <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="card text-center ml-0 mr-0">
+        <div class="card text-center ml-0 mr-0">
             <div class="card-header text-white bg-danger">Стандарт 12</div>
-                <div class="card-body">
+            <div class="card-body">
                 <h4 class="card-title">2000 ₽/мес</h4>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">скидка 20% (24000 ₽)</li>
                     <li class="list-group-item">оплата за 12 мес</li>
                     <li class="list-group-item">полный функционал</li>
                 </ul>
-                </div>
-                <div class="card-body">
-                    <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
-                </div>
+            </div>
+            <div class="card-body">
+                <%= link_to t('sign_up'), new_registration_path('user'), class: 'btn btn-outline-primary btn-lg' %>
             </div>
         </div>
     </div>
