--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,10 +4,10 @@
     <div class="container">
       <div class="row">
         <ul class="list-unstyled text-small list-group list-group-horizontal justify-content-end">
-          <li class="list-group-item border-0 bg-transparent">
+          <li class="list-group-item border-0 bg-transparent d-none d-md-block">
             <a class="text-muted" href="+74997042035">84997052117</a>
           </li>
-          <li class="list-group-item border-0 bg-transparent">
+          <li class="list-group-item border-0 bg-transparent d-none d-md-block">
             <a class="text-muted" href="+74997042035">88123392235</a>
           </li>
           <li class="list-group-item border-0 bg-transparent">
@@ -53,12 +53,6 @@
             <li>
               <a class="text-muted" href="/documents">Настройка</a>
             </li>
-            <%# <li>
-              <a class="text-muted" href="/#price">Стоимость</a>
-            </li>
-            <li>
-              <a class="text-muted" href="/#o-nas">О нас</a>
-            </li> %>
             <li>
               <a class="text-muted" href="/oferta">Оферта</a>
             </li>
