--- a/app/views/layouts/_navigation_for_sign_in.html.erb
+++ b/app/views/layouts/_navigation_for_sign_in.html.erb
@@ -1,27 +1,28 @@
-
-  <a class="navbar-brand" href="<%= root_path %>">
+<nav class="navbar navbar-expand-lg px-1 px-md-0 py-3 py-lg-0 w-100 bg-transparent">
+  <a class="navbar-brand p-0 m-0" href="<%= root_path %>">
     <%= image_tag "new_logo_myappda_white.svg", data: {src: "new_logo_myappda_white.svg", title: 'MyAppDa'}, class: 'logo logo_white' %>
   </a>
-    <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0 ms-3 me-auto">
+  <% if current_user != true_user %>
+    <ul class="navbar-nav mx-auto">
+      <%= button_to "You (#{true_user.name }) are signed in as #{current_user.name }<br>Back to admin".html_safe, stop_impersonating_users_path, data: {turbo: false}, class: "btn text-white"  %>
+    </ul>
+  <% end %>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+      <i class="bi bi-list"></i>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <ul class="navbar-nav ms-auto py-0">
       <%= render "/layouts/admin_navigation" if current_admin %>
       <%= render "/layouts/user_navigation" unless current_admin %>
     </ul>
 
-    <% if current_user != true_user %>
-      <ul class="navbar-nav mx-auto">
-        <%= button_to "You (#{true_user.name }) are signed in as #{current_user.name }<br>Back to admin".html_safe, stop_impersonating_users_path, data: {turbo: false}, class: "btn text-white"  %>
-      </ul>
-    <% end %>
-
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown">
-        <% if current_user %>
-          <a class="nav-link dropdown-toggle text-end text-white" data-bs-toggle="dropdown" href="#">
-            <%= current_user.name %>
-          </a>
-          <ul class="dropdown-menu dropdown-user">
-            <li><%= link_to "Выйти", destroy_user_session_url, data: { turbo_method: :delete }, class: 'text-decoration-none' %></li>
-          </ul>
-        <% end %>
-      </li>
-    </ul>
+    <div class="navbar-nav ms-auto py-0">
+        <div class="nav-item dropdown">
+          <a href="#" class="nav-link dropdown-toggle text-white" role="button" data-bs-toggle="dropdown" aria-expanded="false"><%= current_user.name %></a>
+          <div class="dropdown-menu m-0">
+            <%= link_to "Выйти", destroy_user_session_url, data: { turbo_method: :delete }, class: 'dropdown-item text-decoration-none' %>
+          </div>
+        </div>
+    </div>
+  </div>
+</nav>
