--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -597,3 +597,58 @@ body {
   background-color: #e9ecef;
   opacity: 1
 }
+
+/*** IMG ***/
+.img-ratio {
+  --img-ratio: 0.99;
+  height: 0;
+  position: relative;
+  padding-top: calc(100%/(var(--img-ratio, 1)))
+}
+
+.img-ratio.img-ratio_cover,.img-ratio.img-ratio_contain,.img-ratio.img-fit {
+  overflow: hidden
+}
+
+.img-ratio.img-ratio_cover img,.img-ratio.img-ratio_contain img,.img-ratio.img-fit img {
+  height: 100%;
+  width: 100%;
+  max-width: none;
+  max-height: none;
+  object-position: 50% 50%
+}
+
+.img-ratio.img-fit img {
+  --img-fit: cover;
+  object-fit: var(--img-fit, contain)
+}
+
+.img-ratio.img-ratio_cover img {
+  object-fit: cover
+}
+
+.img-ratio.img-ratio_contain img {
+  object-fit: contain
+}
+
+.img-ratio__inner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0
+}
+
+.img-ratio__picture {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  display: block
+}
+
+.img-ratio img {
+  max-height: 100%;
+  max-width: 100%;
+  vertical-align: middle
+}
+/*** IMG ***/
