--- a/app/views/dashboard/services.html.erb
+++ b/app/views/dashboard/services.html.erb
@@ -1,126 +1,120 @@
 
-<div class="row my-4 row-gap-4">
-  <div class="col-6">
-    <div class="card">
-      <div class="card-header">
-        <div class="h4 card-title">Избранное <small>(favorite)</small></div>
+<div class="card-group gap-3 my-3">
+  <div class="card">
+    <div class="card-header">
+      <div class="h4 card-title">Избранное <small>(favorite)</small></div>
+    </div>
+    <div class="card-body">
+      <div class="card-text">
+        <ul>
+          <li>Добавление и удаление товаров в/из избранного на любом устройстве для зарегистрированных клиентов магазина</li>
+          <li>экспорт клиентом списка на почту</li>
+          <li>триггеры</li>
+          <li>Скачать виджет или обратиться в поддержку для настройки</li>
+        </ul>
       </div>
-      <div class="card-body">
-        <div class="card-text">
-          <ul>
-            <li>Добавление и удаление товаров в/из избранного на любом устройстве для зарегистрированных клиентов магазина</li>
-            <li>экспорт клиентом списка на почту</li>
-            <li>триггеры</li>
-            <li>Скачать виджет или обратиться в поддержку для настройки</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card-footer">
-        <div class="f-flex flex-between">
-          <label>Состояние:</label>
-          <span>вкл/выкл</span>
-        </div>
+    </div>
+    <div class="card-footer">
+      <div class="f-flex flex-between">
+        <label>Состояние:</label>
+        <span>вкл/выкл</span>
       </div>
     </div>
   </div>
-  <div class="col-6">
-    <div class="card">
-      <div class="card-header">
-        <div class="h4 card-title">Брошенная корзина <small>(abandoned-cart)</small></div>
+  <div class="card">
+    <div class="card-header">
+      <div class="h4 card-title">Брошенная корзина <small>(abandoned-cart)</small></div>
+    </div>
+    <div class="card-body">
+      <div class="card-text">
+        <ul>
+          <li>Работает на странице оформления заказа и собирает информацию из каждого заполненого поля</li>
+          <li>триггеры</li>         
+          <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_abandoned_cart.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+        </ul>
       </div>
-      <div class="card-body">
-        <div class="card-text">
-          <ul>
-            <li>Работает на странице оформления заказа и собирает информацию из каждого заполненого поля</li>
-            <li>триггеры</li>         
-            <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_abandoned_cart.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card-footer">
-        <div class="f-flex flex-between">
-          <label>Состояние:</label>
-          <span>вкл/выкл</span>
-        </div>
+    </div>
+    <div class="card-footer">
+      <div class="f-flex flex-between">
+        <label>Состояние:</label>
+        <span>вкл/выкл</span>
       </div>
     </div>
   </div>
-  <div class="col-6">
-    <div class="card">
-      <div class="card-header">
-        <div class="h4 card-title">Предзаказ <small>(preorder)</small></div>
+</div>
+<div class="card-group gap-3 mb-3">
+  <div class="card">
+    <div class="card-header">
+      <div class="h4 card-title">Предзаказ <small>(preorder)</small></div>
+    </div>
+    <div class="card-body">
+      <div class="card-text">
+        <ul>
+          <li>Форма заявки на сайте для регистрации запроса на предзаказ товара</li>
+          <li>в инсалес должен быть создан кастомный статус в группе Новый ('new') с названием - 'preorder'</li>
+          <li>перед созданием заказа со статусом Предзаказ проверяется кол-во у товара и если кол-во равно 0 то добавляется кол-во 1 и только тогда можно создать заказ</li>    
+          <li>триггеры</li>
+          <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_preorder.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+        </ul>
       </div>
-      <div class="card-body">
-        <div class="card-text">
-          <ul>
-            <li>Форма заявки на сайте для регистрации запроса на предзаказ товара</li>
-            <li>в инсалес должен быть создан кастомный статус в группе Новый ('new') с названием - 'preorder'</li>
-            <li>перед созданием заказа со статусом Предзаказ проверяется кол-во у товара и если кол-во равно 0 то добавляется кол-во 1 и только тогда можно создать заказ</li>    
-            <li>триггеры</li>
-            <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_preorder.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card-footer">
-        <div class="f-flex flex-between">
-          <label>Состояние:</label>
-          <span>вкл/выкл</span>
-        </div>
+    </div>
+    <div class="card-footer">
+      <div class="f-flex flex-between">
+        <label>Состояние:</label>
+        <span>вкл/выкл</span>
       </div>
     </div>
   </div>
-  <div class="col-6">
-    <div class="card">
-      <div class="card-header">
-        <div class="h4 card-title">Сообщить о поступлении <small>(restock)</small></div>
-      </div>
-      <div class="card-body">
-        <div class="card-text">
-          <%= turbo_stream_from :message_setups %>  
-          <ul>
-            <li>
-              <span>Ссылка на файл с товарами <small>(проверьте чтобы в настройке выгрузки стояла галка  - все варианты)</small></span>
-              <span class="float-end" id='message_setup_buttons_user_<%= current_user.id%>'>
-                <%= render partial: 'message_setups/buttons'%>
-              </span>
-            </li>
-            <%= turbo_frame_tag dom_id(current_user, dom_id(MessageSetup.new)) %>
-            <%= turbo_frame_tag dom_id(current_user, :message_setups), data: { } do %>
-              <% MessageSetup.all.each do |message_setup|%>
-                <%= render partial: "message_setups/message_setup", locals: {message_setup: message_setup} %>
-              <% end %>
+  <div class="card">
+    <div class="card-header">
+      <div class="h4 card-title">Сообщить о поступлении <small>(restock)</small></div>
+    </div>
+    <div class="card-body">
+      <div class="card-text">
+        <%= turbo_stream_from :message_setups %>  
+        <ul>
+          <li>
+            <span>Ссылка на файл с товарами <small>(проверьте чтобы в настройке выгрузки стояла галка  - все варианты)</small></span>
+            <span class="float-end" id='message_setup_buttons_user_<%= current_user.id%>'>
+              <%= render partial: 'message_setups/buttons'%>
+            </span>
+          </li>
+          <%= turbo_frame_tag dom_id(current_user, dom_id(MessageSetup.new)) %>
+          <%= turbo_frame_tag dom_id(current_user, :message_setups), data: { } do %>
+            <% MessageSetup.all.each do |message_setup|%>
+              <%= render partial: "message_setups/message_setup", locals: {message_setup: message_setup} %>
             <% end %>
-            <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_restock.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
-          </ul>
-        </div>
+          <% end %>
+          <li>Скачать <%= link_to 'виджет', asset_url("/widgets/wt_restock.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+        </ul>
       </div>
-      <div class="card-footer">
-        <div class="f-flex flex-between">
-          <label>Состояние:</label>
-          <span>вкл/выкл</span>
-        </div>
+    </div>
+    <div class="card-footer">
+      <div class="f-flex flex-between">
+        <label>Состояние:</label>
+        <span>вкл/выкл</span>
       </div>
     </div>
   </div>
-  <div class="col-6">
-    <div class="card">
-      <div class="card-header">
-        <div class="h4 card-title">Заказы <small>(order)</small></div>
+</div>
+<div class="card-group gap-3 w-50">
+  <div class="card">
+    <div class="card-header">
+      <div class="h4 card-title">Заказы <small>(order)</small></div>
+    </div>
+    <div class="card-body">
+      <div class="card-text">
+        <ul>
+          <li>уведомление клиентов и менеджеров магазина при смене статусов заказов с помощью InsalesApi, SMS, Email сообщений</li>
+          <li>триггеры</li>
+          <li>скачать виджет или обратиться в поддержку для настройки</li>
+        </ul>
       </div>
-      <div class="card-body">
-        <div class="card-text">
-          <ul>
-            <li>уведомление клиентов и менеджеров магазина при смене статусов заказов с помощью InsalesApi, SMS, Email сообщений</li>
-            <li>триггеры</li>
-            <li>скачать виджет или обратиться в поддержку для настройки</li>
-          </ul>
-        </div>
-      </div>
-      <div class="card-footer">
-        <div class="f-flex flex-between">
-          <label>Состояние:</label>
-          <span>вкл/выкл</span>
-        </div>
+    </div>
+    <div class="card-footer">
+      <div class="f-flex flex-between">
+        <label>Состояние:</label>
+        <span>вкл/выкл</span>
       </div>
     </div>
   </div>
