--- a/app/views/message_setups/_message_setup.html.erb
+++ b/app/views/message_setups/_message_setup.html.erb
@@ -5,10 +5,10 @@
     <%= tag.div(message_setup.status, class: "col-2 d-none") %>
     <%= tag.div(message_setup.payplan_id, class: "col-3 d-none") %>
     <%= tag.div(message_setup.valid_until, class: "col-2 d-none") %>
-    <%= tag.div(message_setup.product_xml, class: "col-9") %>
+    <%= tag.div(message_setup.product_xml.present? ? message_setup.product_xml : 'добавьте ссылку на файл с каталогом xml', class: "col-9 fw-lighter fst-italic") %>
 
     <div class= "col-1 d-flex justify-content-end gap-2 align-items-center">
         <%= link_to edit_icon, edit_message_setup_path(message_setup), class: '' %>
-        <%= link_to trash_icon, message_setup, data: { "turbo-method": :delete, 'turbo-confirm': 'Are you sure?' }, class:"" %>
+        <%# link_to trash_icon, message_setup, data: { "turbo-method": :delete, 'turbo-confirm': 'Are you sure?' }, class:"" %>
     </div>
 <% end %>
