--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -38,7 +38,18 @@
         <tr>
           <td><%=pr.insid%></td>
           <td><%= link_to "#{pr.title}", "http://"+current_user.insints.first.subdomen+"/product_by_id/"+pr.insid.to_s, target: "_blank" %></td>
-          <td><img src="<%= pr.image_link %>" style="width:100px;"/> </td>
+          <td class="p-0">
+              <div class="img-ratio img-fit">
+                  <div class="img-ratio__inner">
+                      <a href="#" >
+                          <picture>
+                              <source srcset="<%= pr.image_link %>" type="image/svg+xml">
+                              <img src="<%= pr.image_link %>" class="img-fluid img-thumbnail" alt="...">
+                          </picture>
+                      </a>
+                  </div>
+              </div>
+          </td>
           <td><%=pr.price%></td>
         </tr>
         <% end %>
