--- a/app/views/useraccounts/_useraccount.html.erb
+++ b/app/views/useraccounts/_useraccount.html.erb
@@ -1,10 +1,10 @@
 <%= turbo_frame_tag dom_id(current_user, dom_id(useraccount)), class: "d-flex list-group-item py-2 border-start-0 border-end-0 row", data: {}  do %>
-    <%= tag.div(useraccount.name, class: "col-3") %>
-    <%= tag.div(useraccount.email, class: "col-2") %>
-    <%= tag.div(useraccount.shop, class: "col-2") %>
-    <%= tag.div(useraccount.insuserid, class: "col-2") %>
+    <%= tag.div(useraccount.name, class: "col-5") %>
+    <%= tag.div(useraccount.email, class: "col-5") %>
+    <%= tag.div(useraccount.shop, class: "col-2 d-none") %>
+    <%= tag.div(useraccount.insuserid, class: "col-2 d-none") %>
 
-    <div class= "col-1 d-flex justify-content-end gap-2 align-items-center">
+    <div class= "col-2 d-flex justify-content-end gap-2 align-items-center">
         <%= link_to edit_icon, edit_useraccount_path(useraccount), class: '' %>
         <%= link_to trash_icon, useraccount, data: { "turbo-method": :delete, 'turbo-confirm': 'Are you sure?' }, class:"" %>
     </div>
