--- a/app/views/dashboard/services.html.erb
+++ b/app/views/dashboard/services.html.erb
@@ -10,7 +10,8 @@
           <li>Добавление и удаление товаров в/из избранного на любом устройстве для зарегистрированных клиентов магазина</li>
           <li>экспорт клиентом списка на почту</li>
           <li>триггеры</li>
-          <li>Скачать <%= link_to 'виджет', asset_url("/widgets/favorites.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+          <li>Скачать <%= link_to 'виджет  доб/уд', asset_url("/widgets/wt_favorites.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
+          <li>Скачать <%= link_to 'виджет  страницы', asset_url("/widgets/wt_favorites_products_page.zip"), target: '_blank'%> или обратиться в поддержку для настройки</li>
           <li>
             проверить в карточке товара и каталоге есть информация об id варианта
             <code>
