--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -29,8 +29,8 @@
       <tr class="bg-success mt-0">
         <th>Clients</th>
         <th>Products</th>
-        <%=tag.th '<i class="bi bi-heart"></i>'.html_safe, title: 'Favorites' %>
-        <%=tag.th '<i class="bi bi-arrow-repeat"></i>'.html_safe, title: 'Restock' %>
+        <%=tag.th heart_icon, title: 'Favorites' %>
+        <%=tag.th reload_icon, title: 'Restock' %>
       </tr>
     </thead>
     <tbody class="align-middle">
