--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -1,27 +1,25 @@
-<div class="row align-items-center g-2">
-  <div class="col-1 btn-group mt-5">
+<div class="row justify-content-start align-items-center g-2 mt-3">
+  <div class="col-1 btn-group me-5">
     <%= link_to 'Назад', clients_path, class: 'btn btn-outline-success btn-sm' %>
   </div>
-</div>
-<div class="row justify-content-center align-items-center g-2 mt-3">
-<div class="d-flex flex-column mb-2">
-  <div class=""> 
-    <strong>Client id:</strong> <%= @client.clientid %> 
-    <strong>ФИО:</strong> <%= @client.fio %> 
+  <div class="col-4 d-flex flex-column">
+    <div class=""> 
+      <strong>Client id:</strong> <%= @client.clientid %> 
+      <strong>ФИО:</strong> <%= @client.fio %> 
+    </div>
+    <div class=""> 
+      <strong>Email:</strong> <%= @client.email %> <strong>Phone:</strong> <%= @client.phone %>
+    </div>
   </div>
-  <div class=""> 
-    <strong>Email:</strong> <%= @client.email %> <strong>Phone:</strong> <%= @client.phone %>
-  </div>
-  <div class="mt-1">
+  <div class="col-2">
     <%= link_to reload_icon+" данные из Insales", update_from_insales_path(@client), data: {turbo: false}, class: 'btn btn-outline-primary' if @client.clientid %>
   </div>
-</div>
 </div>
 <% if @favorite_products.present? %>
   <div class="row align-items-center mt-3 mb-3">
     <div class="col-4 d-flex w-100 align-items-center mb-2">
       <strong><%= heart_icon%> Избранное</strong>
-      <%= link_to mail_icon+' избранное'.html_safe, emailizb_client_path(@client.id), title: "Отправить письмо с избранным", class: "btn btn-light ms-auto", data: {turbo_method: :get, turbo_stream: true} %>
+      <%= link_to mail_icon+' избранное'.html_safe, emailizb_client_path(@client), title: "Отправить письмо с избранным", class: "btn btn-light ms-auto", data: {turbo_method: :get, turbo_stream: true} %>
     </div>
     <div class="table-responsive">
     <table class="table table-hover table-condensed table-sm">
