--- a/app/views/client_mailer/emailizb.html.erb
+++ b/app/views/client_mailer/emailizb.html.erb
@@ -26,6 +26,6 @@
     <p><%= @shoptitle %></p>
     <p>Спасибо что Вы с нами, хорошего дня!</p>
     <p></p>
-    <p><a href="https://k-comment.ru/" target="_blank" style="color:red;font-style: italic;">Отправлено через сервис "K-comment"</a></p>
+    <p><a href="https://myappda.ru/" target="_blank" style="color:red;font-style: italic;">Отправлено через сервис "Myappda"</a></p>
   </body>
 </html>
