change restock service

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -29,7 +29,7 @@
         <p class="lead text-secondary">Мы - это команда единомышленников, которая собралась чтобы создавать решения типовых задач наших клиентов.</p>
       </div>
       <div class="col-12 col-md-6 mr-auto">
-        <p class="lead text-secondary">Мы работаем со следующими технологиями - Ruby on Rils, HTML, CSS, и JavaScript</p>
+        <p class="lead text-secondary">Мы работаем со следующими технологиями - Ruby on Rails, HTML, CSS, и JavaScript</p>
       </div>
     </div>
 
